--- a/index.html
+++ b/index.html
@@ -305,9 +305,7 @@
 						<img src="images/cyber.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Jeopardy</h4>
-								<h5>Jeopardy refers to a style of competition where participants solve challenges
-									across multiple categories, each with 
-									increasing difficulty.. 
+								<h5>Jeopardy refers to a style of competition where participants solve challenges. 
 								</h5>
 
 								<h5><br><br><br>The categories may cover topics like cryptography, reverse engineering, <br>forensics, and web security. 
@@ -430,7 +428,7 @@
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
 						<img src="images/Capture.png" class="img-responsive" alt="portfolio img">
-							<div class="portfolio-overlay">
+							<div class="portfolio-overlay text-center">
 								<h4>Personal Website V1</h4>
 								<h5>Created in 2022</h5>
 							</div>
