--- a/index.html
+++ b/index.html
@@ -293,8 +293,7 @@
 						<img src="images/game.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Playing Games</h4>
-								<h5>I play games along with my girlfriend, i still play games because
-									it is one of the best escape that you could ever experience.
+								<h5>I play games with my girlfriend because it's the perfect escape.
 								</h5>
 							</div>
 					</div>
