--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 						<img src="images/gym_matt/gym2.JPG" class="img-responsive" alt="gym" style="width: 900px;">
 							<div class="portfolio-overlay">
 								<h3>Body Building</h3>
-								<h5>Every weekend or during my free time, 
+								<h5>Every weekend or during my free-time, 
 									i make sure that i waste no time.
 								</h5>
 							</div>
