--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/cyberninja.jpeg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Hack4Gov Cyber Ninja <br>2023 Team</h4>
+								<h5>Hack4Gov Cyber Ninja<br>2023 Team</h5>
 								<h5>
 									the founders of the organization and creators of the team name, CyberNinja.<br>
 								</h5>
@@ -355,7 +355,8 @@
 						<img src="images/org.jpeg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Cybersecurity Organization</h4>
-								<h5>As the team grows, these six teams are the first to participate in the Hack4Gov.</h5>
+								<h5>The team has grown to six, the first to join Hack4Gov.
+								</h5>
 								<h5>
 									<br><br><br><br><br><br><br><br>
 									We continue to expand our organization by participating in Hack4Gov events <br> 
@@ -379,8 +380,8 @@
 							<div class="portfolio-overlay">
 								<h4>Hack4Gov 2023</h4>
 								<h5>2 Teams 4 participants</h5>
-								<h5>CarSU Kr4ken 1st place<br>
-									CarSU Cyber Ninja 3rd place
+								<h5>Kr4ken 1st place<br>
+									Cyber Ninja 3rd place
 								</h5>
 
 							</div>
@@ -405,8 +406,8 @@
 							<div class="portfolio-overlay">
 								<h4>Hack4Gov 2024</h4>
 								<h5>2 Teams 4 Participants</h5>
-								<h5>CarSU Cyber Knights 8th place<br>
-									CarSU Cyber Ninja Champion
+								<h5>Cyber Knights 8th place<br>
+									Cyber Ninja Champion
 								</h5>
 							</div>
 					</div>
