--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 						<img src="images/3.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Anonymous</h4>
-								<h5>When I was a kid, I was always amazed by the community called "Anonymous PH."<br><br><br><br> 
+								<h5>When I was a kid, I was always amazed by the community called "Anonymous PH."<br><br><br><br><br>
 									Now, I can't believe I got a picture of one of its members. It's truly an inspiring moment.
 								</h5>
 							</div>
