--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 							<p><i class="fa fa-phone"></i> +63 945-311-7894</p>
 							<p><i class="fa fa-envelope-o"></i> jankevin.dionaldo64@gmail.com</p>
 							<p><i class="fa fa-map-marker"></i> J.C Aquino, Butuan City</p>
-							<p><a href="/cv/Kevin_Dionaldo_CV .pdf" target="_blank"><i class="fa fa-link"></i>My CV</a></p>
+							<p><a href="cv/Kevin_Dionaldo_CV .pdf" target="_blank"><i class="fa fa-link"></i>My CV</a></p>
 						</address>
 					</div>
 					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
