--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
+		<link rel="icon" href="images/head_logo/transs-W.png" sizes="16-x16 32x32 64x64">
+		
 		
 		<!-- animate -->
 		<link rel="stylesheet" href="css/animate.min.css"> 
@@ -487,7 +489,7 @@
 					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
 						
 						<ul class="social-icon">
-							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="https://web.facebook.com/kevin.dionaldo.10" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-instagram"></a></li>
 						</ul>
